# auto-apply-lut

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release-tag-build.yml
.trae/ai_docs/: API设计文档.md  开发规范.md  技术方案.md  数据库设计.md  苹果风格设计规范.md  项目结构设计.md
.trae/rules/: project_rules.md
scripts/: prepare-ffmpeg.mjs
skills/auto-apply-lut/: SKILL.md  apply-lut.js
src/: App.css  App.layout.test.ts  App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  cargo_check_output.txt  tauri.conf.json  tauri.full.conf.json  tauri.lite.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: batch_manager.rs  command_interfaces_tests.rs  encoding_options.rs  file_manager.rs  gpu_manager.rs  lut_manager.rs  mod.rs  processor.rs  system_manager.rs
src-tauri/src/core/: gpu.rs  mod.rs  system.rs
src-tauri/src/core/ffmpeg/: decoder.rs  encoder.rs  filters.rs  mod.rs  processor.rs  utils.rs
src-tauri/src/core/file/: metadata.rs  mod.rs  scanner.rs  utils.rs  watcher.rs
src-tauri/src/core/lut/: cache.rs  converter.rs  data.rs  mod.rs  parser.rs  processor.rs  utils.rs  validator.rs
src-tauri/src/core/task/: mod.rs
src-tauri/src/core/video/: metadata.rs  mod.rs
src-tauri/src/database/: migrations.rs  mod.rs  models.rs  runtime.rs
src-tauri/src/database/queries/: batch.rs  lut.rs  mod.rs  settings.rs  task.rs  video.rs
src-tauri/src/events/: batch.rs  error.rs  gpu.rs  mod.rs  progress.rs  system.rs
src-tauri/src/types/: batch.rs  error.rs  gpu.rs  lut.rs  lut_conversion.rs  mod.rs  system.rs  task.rs  video.rs
src-tauri/src/utils/: concurrency.rs  config.rs  file_utils.rs  logger.rs  mod.rs  path_utils.rs  validation.rs
src/components/: FileUpload.css  FileUpload.test.tsx  FileUpload.tsx  LutLibraryPanel.css  LutLibraryPanel.test.tsx  LutLibraryPanel.tsx  LutSelector.tsx  MultiFileSelector.tsx  ProcessingStatus.css  ProcessingStatus.tsx  SettingsModal.css  SettingsModal.test.tsx  SettingsModal.tsx  SettingsPanel.css  (+3 more)
(+2 files in other folders)
