[package]
name = "auto-apply-lut"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "auto_apply_lut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
futures = "0.3"
anyhow = "1.0"
base64 = "0.22"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.32"
rayon = "1.10"
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
num_cpus = "1.16"
reqwest = { version = "0.12", features = ["json"] }
flate2 = "1.0"
pathdiff = "0.2"
tempfile = "3.0"
bincode = "1.3"
async-trait = "0.1"
sha2 = "0.10"
notify = "6"
sha1 = "0.10"
regex = "1"
md-5 = "0.10"
digest = "0.10"
async-recursion = "1.0"

# Optional FFmpeg native binding for static linking (disabled by default)
ffmpeg-next = { version = "6", default-features = false, optional = true, features = ["build", "static"] }
# Direct sys binding used only for version queries inside cfg(feature = "ffmpeg_native")
ffmpeg-sys-next = { version = "6", default-features = false, optional = true }

[features]
default = []
# Enable this to build with statically linked FFmpeg via ffmpeg-next/ffmpeg-sys-next
ffmpeg_native = ["dep:ffmpeg-next", "dep:ffmpeg-sys-next"]
